corrigindo erros de acessibilidade do NVDA

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <article id="first_section">
         <!-- banner -->
         <section class="banner-bistec">
-            <img src="assets/images/banner-moliceiro.png" alt="Imagem de fundo com mascara de cor vermelha, mostrando um bondinho de portugal">
+            <img src="assets/images/banner-moliceiro.png" alt="Imagem de fundo com o moliceiro da cidade de Aveiro">
             <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
                 <h2>Serviços em tecnologia para todas as empresas</h2>
@@ -28,7 +28,7 @@
         </section>
 
         <section class="banner-bistec-mobile">
-            <img src="assets/images/banner-mobile-moliceiro.png" alt="Imagem de fundo com mascara de cor vermelha, mostrando um bondinho de portugal para mobile">
+            <img src="assets/images/banner-mobile-moliceiro.png" alt="Imagem de fundo com o moliceiro da cidade de Aveiro para mobile">
             <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
                 <h2>Serviços em tecnologia para todas as empresas</h2>
@@ -55,14 +55,14 @@
                             </div>
                             <div class="modal-body">
                                 <p>
-                                    A Bistec, consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas.
+                                    A Bistec, consolidada no mercado de tecnologia para o comércio e serviços, oferece o kit completo para montar seu PDV e automatizar suas vendas.
                                 </p>
                                 <p>
                                     Adquira conosco a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes e esteja em dia com a legislação fiscal. Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, relógios de pontos digitais, computadores, etc. Temos também softwares para a automação comercial da sua empresa.
                                 </p>
                             </div>
                             <div class="modal-footer">
-                                <p>©2022 Bistec · Consultoria de TI · Todos os direitos reservados.</p>
+                                <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
                             </div>
                         </div>
                     </div>
@@ -88,14 +88,14 @@
                             </div>
                             <div class="modal-body">
                                 <p>
-                                    As informações corporativas estão cada vez mais digitalizadas e online, por isso as empresas devem se prevenir contra a perda de informações importantes. Com essa solução você ajuda a <strong>proteger os arquivos que a sua empresa precisa</strong> e os restaura rapidamente após uma falha do sistema ou perda de dados.
+                                    As informações corporativas estão cada vez mais digitalizadas e online, por isso as empresas devem se prevenir contra a perda de informações importantes. Com essa solução você ajuda a proteger os arquivos que a sua empresa precisa e os restaura rapidamente após uma falha do sistema ou perda de dados.
                                 </p>
                                 <p>
                                     O Bistec Cloud é a solução ideal de backup em nuvem, seguro e elástico, sem custos de investimentos em infraestrutura e de acordo com o Regulamento Geral de Proteção de Dados (GDPR).
                                 </p>
                             </div>
                             <div class="modal-footer">
-                                <p>©2022 Bistec · Consultoria de TI · Todos os direitos reservados.</p>
+                                <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
                             </div>
                         </div>
                     </div>
@@ -120,14 +120,14 @@
                             </div>
                             <div class="modal-body">
                                 <p>
-                                    Constantemente, a implementação de um software de gestão acaba por falhar, porque não é dada a atenção necessária a esse profissional que utilizará a ferramenta no dia-a-dia. Para evitar este tipo de situação, <strong>o Bistec Edu fornece formação para toda a sua equipa</strong> explorar 100% da capacidade das soluções adquiridas.
+                                    Constantemente, a implementação de um software de gestão acaba por falhar, porque não é dada a atenção necessária a esse profissional que utilizará a ferramenta no dia-a-dia. Para evitar este tipo de situação, o Bistec Edu fornece formação para toda a sua equipa explorar 100% da capacidade das soluções adquiridas.
                                 </p>
                                 <p>
                                     Temos profissionais com mais de 25 anos de experiência académica e educadores certificados do Google nível 1.
                                 </p>
                             </div>
                             <div class="modal-footer">
-                                <p>©2022 Bistec · Consultoria de TI · Todos os direitos reservados.</p>
+                                <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
                             </div>
                         </div>
                     </div>
@@ -158,11 +158,11 @@
                                 A GDPR (General Data Protection Regulation) 2016/679 é um regulamento da legislação europeia sobre privacidade e proteção de dados pessoais, aplicável a todos os indivíduos da União Europeia e do Espaço Económico Europeu que foi implementado em 2018.
                             </p>
                             <p>
-                                A GDPR define <strong>multas, sanções e processos cível aos controladores e operadores que não cumpram as suas bases legais</strong>, de acordo com o tipo de evento e gravidade.
+                                A GDPR define multas, sanções e processos cível aos controladores e operadores que não cumpram as suas bases legais, de acordo com o tipo de evento e gravidade.
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <p>©2022 Bistec · Consultoria de TI · Todos os direitos reservados.</p>
+                            <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
                         </div>
                     </div>
                 </div>
@@ -188,14 +188,14 @@
                             </div>
                             <div class="modal-body">
                                 <p>
-                                    Por uma mensalidade, a sua empresa pode contar com <strong>suporte técnico telefónico e online, bem como visitas técnicas preventivas e corretivas.</strong> Realizamos a manutenção periódica e resolvemos problemas mais graves, sejam eles equipamentos ou software, com o serviço dos nossos técnicos, treinados para servir a sua empresa de forma rápida e eficaz.
+                                    Por uma mensalidade, a sua empresa pode contar com suporte técnico telefónico e online, bem como visitas técnicas preventivas e corretivas. Realizamos a manutenção periódica e resolvemos problemas mais graves, sejam eles equipamentos ou software, com o serviço dos nossos técnicos, treinados para servir a sua empresa de forma rápida e eficaz.
                                 </p>
                                 <p>
                                     Ao contratar os nossos serviços e optar pelo atendimento de final de semana e feriados, a sua empresa não fica na mão quando você mais precisa.
                                 </p>
                             </div>
                             <div class="modal-footer">
-                                <p>©2022 Bistec · Consultoria de TI · Todos os direitos reservados.</p>
+                                <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
                             </div>
                         </div>
                     </div>
@@ -221,14 +221,14 @@
                             </div>
                             <div class="modal-body">
                                 <p>
-                                    Mantenha a sua liquidez adquirindo os sistemas de gestão e TI através da locação de equipamentos. Esta solução permite que você  <strong>preserve as suas linhas de crédito junto aos bancos</strong> e assim faça um investimento rentável durante o ciclo de vida dos seus equipamentos, assim melhorando a sua classificação de crédito.
+                                    Mantenha a sua liquidez adquirindo os sistemas de gestão e TI através da locação de equipamentos. Esta solução permite que você preserve as suas linhas de crédito junto aos bancos e assim faça um investimento rentável durante o ciclo de vida dos seus equipamentos, assim melhorando a sua classificação de crédito.
                                 </p>
                                 <p>
                                     Tenha acesso à tecnologia de ponta e, quando o contrato acabar, você pode fazer upgrade nos equipamentos.
                                 </p>
                             </div>
                             <div class="modal-footer">
-                                <p>©2022 Bistec · Consultoria de TI · Todos os direitos reservados.</p>
+                                <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
                             </div>
                         </div>
                     </div>
@@ -274,7 +274,7 @@
                                 </ul>                               
                             </div>
                             <div class="modal-footer">
-                                <p>©2022 Bistec · Consultoria de TI · Todos os direitos reservados.</p>
+                                <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
                             </div>
                         </div>
                     </div>
@@ -308,11 +308,11 @@
                                     No modelo break-fix o suporte técnico é acionado após o problema acontecer e até que ele seja resolvido você fica com seu equipamento/sistema inoperante.
                                 </p>
                                 <p>
-                                    Já no modelo MSP, a Bistec atua <strong>ativamente</strong>, utilizando ferramentas gerenciais, para analisar em tempo real o que está acontecendo com seu computador e sistemas. Dessa forma é possível sanar seus problemas <strong>mesmo que eles aconteçam.</strong>
+                                    Já no modelo MSP, a Bistec atua ativamente, utilizando ferramentas gerenciais, para analisar em tempo real o que está acontecendo com seu computador e sistemas. Dessa forma é possível sanar seus problemas mesmo que eles aconteçam.
                                 </p>
                             </div>
                             <div class="modal-footer">
-                                <p>©2022 Bistec · Consultoria de TI · Todos os direitos reservados.</p>
+                                <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
                             </div>
                         </div>
                     </div>
@@ -351,7 +351,7 @@
                             </ul>
                         </div>
                         <div class="modal-footer">
-                            <p>©2022 Bistec · Consultoria de TI · Todos os direitos reservados.</p>
+                            <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
                         </div>
                     </div>
                 </div>
@@ -412,7 +412,7 @@
         </div>
     </footer>
     <div class="footer-copyright">
-        <p>©2022 Bistec · Consultoria de TI · Todos os direitos reservados.</p>
+        <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
     </div>
 
     <script src="./assets/js/componente_menu.js"></script>
