--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
     <span class="menu-principal"></span>
 
     <!-- CORPO -->
-    <article>
+    <article id="first_section">
         <div class="formulario">
             <form action="email/" method="POST" id="formContato">
                 <h1>Formulário para Contato</h1>
@@ -103,12 +103,12 @@
         </div>
     </footer>
     <div class="footer-copyright">
-        <p>©2022 Bistec · Consultoria de TI · Todos os direitos reservados.</p>
+        <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
     </div>
 
     <script src="./assets/js/componente_menu.js"></script>
     <script src="./assets/js/main.js" defer></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
     <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script>
-<body>
+</body>
 </html>
