--- a/produtos/wifi.html
+++ b/produtos/wifi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Início - Bistec Portugal</title>
+    <title>Bistec WiFi - Bistec Portugal</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/styleMobile.css">
     <link rel="stylesheet" href="../assets/css/styleTablet.css">
