--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:site_name" content="Bistec PT" />
     <meta property="og:description" content="Bistec Consultoria de TI. Desde 1999 fornecendo produtos e serviços de Automação Comercial e Informática. Aproveite o melhor da tecnologia para seu negócio." />
 
-    <meta property="og:image" content="./assets/images/bistec-meta-redes-sociais.png" />
+    <meta property="og:image" content="https://bistec.com.pt/assets/images/bistec-meta-redes-sociais.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:alt" content="Logo Bistec" />
     <meta property="og:image:width" content="250" />
