corrige erro de falta de parametro no main.js linha 39

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
         <!-- PRODUTOS -->
-        <section class="bistec-produtos">
+        <section class="bistec-produtos" id="bistec-automacao">
                 <img src="assets/images/img-lg-bistec-automacao.png" alt="Bistec Automação"> 
                 <div class="texto-produtos">
                     <h2>Troque a anotação pela automação</h2>
