--- a/produtos/edu.html
+++ b/produtos/edu.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../assets/css/styleTelaQuadrada.css">
     <link rel="stylesheet" href="../assets/css/styleTv.css">
     <link rel="stylesheet" href="../assets/css/styleProdutos.css">
-    <link rel="icon" href="assets/images/logo-bistec-favicon.png">
+    <link rel="icon" href="../assets/images/logo-bistec-favicon.png">
 </head>
 <body>
     <!-- cabeçalho -->
