correção pt-br para pt-pt

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     Estar preparado para cumprir o Regulamento Geral de Proteção de Dados e proteger contra multas e fugas de informações de terceiros
                 </h3>
                 
-                <button class="bt-dialog" title="Bistec GDPR">
+                <button class="bt-dialog" title="Bistec RGPD">
                     <span class="button_text">Saiba Mais</span>                   
                 </button>
                 
@@ -151,11 +151,11 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button class="close">&times;</button>
-                            <h2>Bistec GPDR</h2>
+                            <h2>Bistec RGPD</h2>
                         </div>
                         <div class="modal-body">
                             <p>
-                                A GDPR (General Data Protection Regulation) 2016/679 é um regulamento da legislação europeia sobre privacidade e proteção de dados pessoais, aplicável a todos os indivíduos da União Europeia e do Espaço Económico Europeu que foi implementado em 2018.
+                                O Regulamento Geral de Proteção de Dados (RGPD) é um regulamento da legislação europeia sobre privacidade e proteção de dados pessoais, aplicável a todos os indivíduos da União Europeia e do Espaço Económico Europeu que foi implementado em 2018.
                             </p>
                             <p>
                                 A GDPR define multas, sanções e processos cível aos controladores e operadores que não cumpram as suas bases legais, de acordo com o tipo de evento e gravidade.
