--- a/produtos/gdpr.html
+++ b/produtos/gdpr.html
@@ -40,10 +40,10 @@
         <div class="produto-texto">
             <h1>Bistec GDPR</h1>
             <p>
-                A GDPR (General Data Protection Regulation) 2016/679 é um regulamento da legislação europeia sobre privacidade e proteção de dados pessoais, aplicável a todos os indivíduos da União Europeia e do Espaço Económico Europeu que foi implementado em 2018.
+                O Regulamento Geral de Proteção de Dados (RGPD) é um regulamento da legislação europeia sobre privacidade e proteção de dados pessoais, aplicável a todos os indivíduos da União Europeia e do Espaço Económico Europeu que foi implementado em 2018.
             </p>
             <p>
-                A GDPR define multas, sanções e processos cível aos controladores e operadores que não cumpram as suas bases legais, de acordo com o tipo de evento e gravidade.
+                A RGPD define multas, sanções e processos cível aos controladores e operadores que não cumpram com as suas bases legais, de acordo com o tipo de evento e gravidade.
             </p>
         </div>
     </article>
