--- a/produtos/msp.html
+++ b/produtos/msp.html
@@ -47,7 +47,7 @@
         </p>
 
         <p>
-            Já no modelo MSP, a Bistec atua ativamente, utilizando ferramentas gerenciais, para analisar em tempo real o que está acontecendo com seu computador e sistemas. Dessa forma é possível sanar seus problemas mesmo que eles aconteçam.
+            Já no modelo MSP, a Bistec atua ativamente, utilizando ferramentas gerenciais, para analisar em tempo real o que está a acontecer com o seu computador e sistemas. Dessa forma é possível resolver os seus problemas antes mesmo de eles acontecerem.
         </p>
 
         <p>....</p>
