--- a/produtos/renting.html
+++ b/produtos/renting.html
@@ -43,15 +43,15 @@
             Mantenha a sua liquidez adquirindo os sistemas de gestão e TI através da locação de equipamentos.
         </p>
         <p>
-            Esta solução permite que você preserve as suas linhas de crédito junto aos bancos e assim faça um investimento rentável durante o ciclo de vida dos seus equipamentos, assim melhorando a sua classificação de crédito.
+            Esta solução permite que preserve as suas linhas de crédito junto aos bancos e assim faça um investimento rentável durante o ciclo de vida dos seus equipamentos, melhorando a sua classificação de crédito.
         </p>
         <p>
-            Tenha acesso à tecnologia de ponta e, quando o contrato acabar, você pode fazer upgrade nos equipamentos.
+            Tenha acesso a tecnologia de ponta e, quando o contrato acabar, faça upgrade dos seus equipamentos.
         </p>
         
         <p>
             <h4>
-                Benefícios de você trabalhar com o Bistec Renting:
+                Benefícios de trabalhar com o Bistec Renting:
             </h4>
     <br>
             <ul>
