--- a/produtos/wifi.html
+++ b/produtos/wifi.html
@@ -40,13 +40,18 @@
     <div class="produto-texto">
         <h1>Bistec Wifi</h1>
         <p>
-            Constantemente, a implementação de um software de gestão acaba por falhar, porque não é dada a atenção necessária a esse profissional que utilizará a ferramenta no dia-a-dia. Para evitar este tipo de situação, <strong>o Bistec Edu fornece formação para toda a sua equipa explorar 100% da capacidade das soluções adquiridas.</strong>
+            A Bistec, consolidada no mercado de tecnologia para o comércio e serviços, oferece o kit completo para montar o seu PDV e automatizar as suas vendas.
         </p>
         <p>
-            Temos profissionais com mais de 25 anos de experiência académica e educadores certificados do Google nível 1.
+            Adquira connosco a Solução SAT Fiscal, facilite a sua gestão e as transações com os seus clientes e esteja em dia com a legislação fiscal. Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, relógios de pontos digitais, computadores, etc. Temos também softwares para a automação comercial da sua empresa.
         </p>
+
         <p>
-            Acesso aos nossos recursos de aprendizado:
+            Elimine falhas de controle operacional com os relógios de pontos digitais. Com o modelo móvel o controle de ponto dos funcionários pode ser realizado onde eles estiverem.
+        </p>
+
+        <p>
+            Agora, se você está à procura da melhor solução para a gestão da sua empresa, <a class="link_automaçao" target="_blank" href="https://hiper.com.br/experimente-gratis/?HCode=BIS01625">clique aqui e Experimente grátis por 7 dias!</a>
         </p>
     </div>
     </article>
