--- a/produtos/outsourcing.html
+++ b/produtos/outsourcing.html
@@ -40,10 +40,10 @@
     <div class="produto-texto">
         <h1>Bistec Outsourcing</h1>
         <p>
-            A Bistec, consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas.
+            A Bistec, consolidada no mercado de tecnologia para o comércio e serviços, oferece o kit completo para montar o seu PDV e automatizar suas vendas.
         </p>
         <p>
-            Adquira conosco a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes e esteja em dia com a legislação fiscal. Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, relógios de pontos digitais, computadores, etc. Temos também softwares para a automação comercial da sua empresa.
+            Adquira connosco a Solução SAT Fiscal, facilite a sua gestão e as transações com os seus clientes e esteja em dia com a legislação fiscal. Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, relógios de pontos digitais, computadores, etc. Temos também softwares para a automação comercial da sua empresa.
         </p>
 
         <p>
