--- a/produtos/edu.html
+++ b/produtos/edu.html
@@ -56,7 +56,7 @@
             </p>
 
             <p>
-                Temos profissionais com mais de 25 anos de experiência académica e educadores certificados do Google nível 1.
+                Temos profissionais com mais de 25 anos de experiência académica. Formadores com CCP (Certificado de Competências Pedagógicas), e-Formadores e educadores certificados Google nível 1.
             </p>
 
             <h2>
