--- a/produtos/wifi.html
+++ b/produtos/wifi.html
@@ -40,18 +40,34 @@
     <div class="produto-texto">
         <h1>Bistec Wifi</h1>
         <p>
-            A Bistec, consolidada no mercado de tecnologia para o comércio e serviços, oferece o kit completo para montar o seu PDV e automatizar as suas vendas.
+            Tudo que a sua empresa precisa para ter uma rede wi-Fi com alto desempenho e de qualidade, obtendo uma ótima experiência de navegação.
         </p>
         <p>
-            Adquira connosco a Solução SAT Fiscal, facilite a sua gestão e as transações com os seus clientes e esteja em dia com a legislação fiscal. Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, relógios de pontos digitais, computadores, etc. Temos também softwares para a automação comercial da sua empresa.
-        </p>
-
-        <p>
-            Elimine falhas de controle operacional com os relógios de pontos digitais. Com o modelo móvel o controle de ponto dos funcionários pode ser realizado onde eles estiverem.
+            Temos soluções para projetos de baixa e média complexidade.
         </p>
 
         <p>
-            Agora, se você está à procura da melhor solução para a gestão da sua empresa, <a class="link_automaçao" target="_blank" href="https://hiper.com.br/experimente-gratis/?HCode=BIS01625">clique aqui e Experimente grátis por 7 dias!</a>
+            <h4>
+                Benefícios de trabalhar com o Bistec Renting:
+            </h4>
+    <br>
+            <ul>
+                <li>- Não descapitaliza a empresa</li>
+                <li>- Incentivos fiscais </li>
+                <li>- Parcelas Fixas </li>
+                <li>- Equipamentos sempre Atualizados</li>
+                <li>- Maior Eficiência em TI</li>
+                <li>- Locação 100% sem entrada</li>
+            </ul>
+        <p>
+
+        <p>
+            Chega de sinal fraco, Bistec WiFi é a solução que o seu negócio precisa!
+        </p>
+
+        <p>
+            A velocidade máxima e qualidade de sinal total de sua conexão de internet depende do serviço oferecido pela sua operadora.
+
         </p>
     </div>
     </article>
