correção tab acessibilidade

--- a/produtos/edu.html
+++ b/produtos/edu.html
@@ -48,7 +48,7 @@
             </p>
 
             <p>
-                Por isso, um dos aspetos mais importantes é a questão  da formaçãoQuando o utilizador não recebe formação adequada não faz um bom uso da ferramenta e sente-se frustrado. Como resultado, ele pode passar a evitar o uso do software, voltando a executar tarefas da maneira como fazia antes da implementação.
+                Por isso, um dos aspetos mais importantes é a questão  da formação. Quando o utilizador não recebe formação adequada não faz um bom uso da ferramenta e sente-se frustrado. Como resultado, ele pode passar a evitar o uso do software, voltando a executar tarefas da maneira como fazia antes da implementação.
             </p>
 
             <p>
@@ -56,7 +56,7 @@
             </p>
 
             <p>
-                Temos profissionais com mais de 25 anos de experiência académica e educadores certificados do Google nível 1.
+                Temos profissionais com mais de 25 anos de experiência académica. Formadores com CCP (Certificado de Competências Pedagógicas), e-Formadores e educadores certificados Google nível 1.
             </p>
 
             <h2>
