mudanças e correções nos textos dos produtos

--- a/produtos/cloud.html
+++ b/produtos/cloud.html
@@ -48,6 +48,10 @@
             <p>
                 O Bistec Cloud é a solução ideal de backup em nuvem, seguro e elástico, sem custos de investimentos em infraestrutura e de acordo com o Regulamento Geral de Proteção de Dados (RGPD).
             </p>
+
+            <p>
+                <a class="nice_button" target="_blank" href="https://bistec.backupmanager.info/">SAIBA MAIS</a>
+            </p>
         </div>
     </article>
 
