--- a/produtos/rgpd.html
+++ b/produtos/rgpd.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bistec GDPR - Bistec Portugal</title>
+    <title>Bistec RGPD - Bistec Portugal</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/styleMobile.css">
     <link rel="stylesheet" href="../assets/css/styleTablet.css">
@@ -21,7 +21,7 @@
     <article id="first_section">
         <!-- banner -->
         <section class="banner-bistec">
-            <img src="../assets/images/produtos/banner-bistec-gdpr.png" alt="Imagem de fundo do produto Bistec GDPR">
+            <img src="../assets/images/produtos/banner-bistec-gdpr.png" alt="Imagem de fundo do produto Bistec RGPD">
             <!--<div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
                 <h2>Serviços em tecnologia para todas as empresas</h2>
@@ -29,7 +29,7 @@
         </section>
 
         <section class="banner-bistec-mobile">
-            <img src="../assets/images/produtos/banner-gdpr-mobile.png" alt="Imagem de fundo do produto Bistec GDPR">
+            <img src="../assets/images/produtos/banner-gdpr-mobile.png" alt="Imagem de fundo do produto Bistec RGPD">
             <!-- <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
                 <h2>Serviços em tecnologia para todas as empresas</h2>
@@ -38,7 +38,7 @@
 
     <!-- texto produto -->
         <div class="produto-texto">
-            <h1>Bistec GDPR</h1>
+            <h1>Bistec RGPD</h1>
             <p>
                 O Regulamento Geral de Proteção de Dados (RGPD) é um regulamento da legislação europeia sobre privacidade e proteção de dados pessoais, aplicável a todos os indivíduos da União Europeia e do Espaço Económico Europeu que foi implementado em 2018.
             </p>
