dark mode bistec.com.pt

--- a/contato.html
+++ b/contato.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="./assets/css/styleTv.css">
     <link rel="icon" href="assets/images/logo-bistec-favicon.png">
     <link rel="stylesheet" href="assets/css/styleContato.css">
+    <link rel="stylesheet" href="./assets/css/styleDark.css">
 </head>
 <body>
     <!-- cabeçalho -->
     <span class="menu-principal"></span>
 
     <!-- CORPO -->
-    <article id="first_section">
+    <article id="first_section" class="article_contact">
         <div class="formulario">
             <form action="email/" method="POST" id="formContato">
                 <h1>Formulário para Contacto</h1>
