--- a/produtos/soft.html
+++ b/produtos/soft.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../assets/css/styleTelaQuadrada.css">
     <link rel="stylesheet" href="../assets/css/styleTv.css">
     <link rel="stylesheet" href="../assets/css/styleProdutos.css">
+    <link rel="stylesheet" href="../assets/css/styleDark.css">
     <link rel="icon" href="../assets/images/logo-bistec-favicon.png">
 </head>
 <body>
