--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <!-- PRODUTOS -->
         <section class="bistec-produtos" id="bistec-automacao">
                 <img src="assets/images/img-lg-bistec-automacao.png" alt="Bistec Automação"> 
+                <img src="assets/images/img-lg-bistec-automacao-branco.png" alt="Bistec Automação">
                 <div class="texto-produtos">
                     <h2>Troque a anotação pela automação</h2>
                     <h3>Facilite a sua gestão e o consumo dos seus clientes. Automatize!</h3>
@@ -64,6 +65,7 @@
 
         <section class="bistec-produtos" id="bistec-cloud">
             <img src="assets/images/img-lg-bistec-cloud.png" alt="Bistec Cloud">
+            <img src="assets/images/img-lg-bistec-cloud-branco.png" alt="Bistec Cloud">
                 <div class="texto-produtos">
                     <h2>Backup corporativo na nuvem</h2>
                     <h3>Guarde o que é importante com segurança, sem ocupar espaço algum!</h3>
@@ -74,6 +76,7 @@
 
         <section class="bistec-produtos" id="bistec-edu">
             <img src="assets/images/img-lg-bistec-edu.png" alt="Bistec Edu">
+            <img src="assets/images/img-lg-bistec-edu-branco.png" alt="Bistec Edu">
                 <div class="texto-produtos">
                     <h2>Treinamentos: use a tecnologia com capacidade máxima.</h2>
                     <h3>Faça o treinamento com toda a sua equipe e explore 100% da capacidade das soluções adquiridas.</h3>
@@ -83,6 +86,7 @@
 
         <section class="bistec-produtos" id="bistec-msp">
             <img src="assets/images/img-lg-bistec-msp.png" alt="Bistec MSP">
+            <img src="assets/images/img-lg-bistec-msp-branco.png" alt="Bistec MSP">
                 <div class="texto-produtos">
                     <h2>Você sabe o que é um MSP?</h2>
                     <h3>
@@ -96,6 +100,7 @@
 
         <section class="bistec-produtos" id="bistec-outsourcing">
             <img src="assets/images/img-lg-bistec-outsourcing.png" alt="Bistec OutSourcing">
+            <img src="assets/images/img-lg-bistec-outsourcing-branco.png" alt="Bistec OutSourcing">
                 <div class="texto-produtos">
                     <h2>Contrate outsourcing de TI</h2><p>
                     <h3>Contrate técnicos preparados para cuidar de sua empresa.</h3>
@@ -106,6 +111,7 @@
 
         <section class="bistec-produtos" id="bistec-renting">
             <img src="assets/images/img-lg-bistec-renting.png" alt="Bistec Renting">
+            <img src="assets/images/img-lg-bistec-renting-branco.png" alt="Bistec Renting">
                 <div class="texto-produtos">
                     <h2>Renting de TI</h2>
                     <h3>Faça a locação de equipamentos, e mantenha a liquidez de sua empresa</h3>
@@ -116,6 +122,7 @@
 
         <section class="bistec-produtos" id="bistec-gpdr">
             <img src="assets/images/img-lg-bistec-rgpd.png" alt="Bistec RGPD">
+            <img src="assets/images/img-lg-bistec-rgpd-branco.png" alt="Bistec RGPD">
             <div class="texto-produtos">
                 <h2>Adeque sua empresa ao RGPD</h2>
                 <h3>
@@ -128,6 +135,7 @@
 
         <section class="bistec-produtos" id="bistec-soft">
             <img src="assets/images/img-lg-bistec-soft.png" alt="Bistec Soft">
+            <img src="assets/images/img-lg-bistec-soft-branco.png" alt="Bistec Soft">
                 <div class="texto-produtos">
                     <h2>Todo tipo de software</h2><p>
                     <h3>O Bistec soft agora cuida do seu site e contas de e-mail!</h3>
@@ -138,6 +146,7 @@
 
         <section class="bistec-produtos" id="bistec-wifi">
             <img src="assets/images/img-lg-bistec-wifi.png" alt="Bistec wifi">
+            <img src="assets/images/img-lg-bistec-wifi-branco.png" alt="Bistec wifi">
             <div class="texto-produtos">
                 <h2>Conheça a nossa solução WAAS: Wi-Fi as a service.</h2>
                 <h3>
