--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
     <article id="first_section">
         <!-- banner -->
         <section class="banner-bistec">
-            <img src="assets/images/moliceiro-banner-bistecportugal2.png" alt="Imagem de fundo com o moliceiro da cidade de Aveiro">
+            <img id="img-banner" alt="Imagem de fundo com o moliceiro da cidade de Aveiro">
             <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
                 <h2>Serviços em tecnologia para todas as empresas</h2>
             </div>
         </section>
 
-        <section class="banner-bistec-mobile">
+        <!-- <section class="banner-bistec-mobile">
             <img src="assets/images/banner-mobile-moliceiro.png" alt="Imagem de fundo com o moliceiro da cidade de Aveiro para mobile">
             <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
                 <h2>Serviços em tecnologia para todas as empresas</h2>
             </div>
-        </section>
+        </section> -->
 
 
         <!-- PRODUTOS -->
