--- a/index.html
+++ b/index.html
@@ -155,6 +155,6 @@
     <script src="./assets/js/componente_rodape.js"></script>
     <script src="./assets/js/main.js" defer></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
-    <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script>
+    <!-- <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script> -->
 </body>
 </html>
