--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./assets/css/styleTelaQuadrada.css">
     <link rel="stylesheet" href="./assets/css/styleTv.css">
     <link rel="stylesheet" href="./assets/css/styleDark.css">
-    <link rel="icon" href="assets/images/logo-bistec-favicon.png">
+    <link rel="icon" href="https://ik.imagekit.io/bistecpt/imagens/logo-bistec-favicon_qs5OCIyQ6.png">
 </head>
 <body>
     <!-- cabeçalho -->
@@ -44,8 +44,8 @@
 
         <!-- PRODUTOS -->
         <section class="bistec-produtos" id="bistec-automacao">
-                <img src="assets/images/img-lg-bistec-automacao.png" alt="Bistec Automação"> 
-                <img src="assets/images/img-lg-bistec-automacao-branco.png" alt="Bistec Automação">
+                <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-automacao_unO6Y7PW8m.png" alt="Bistec Automação"> 
+                <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-automacao-branco_r_afgqS8gN.png" alt="Bistec Automação">
                 <div class="texto-produtos">
                     <h2>Troque a anotação pela automação</h2>
                     <h3>Facilite a sua gestão e o consumo dos seus clientes. Automatize!</h3>
@@ -55,8 +55,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-cloud">
-            <img src="assets/images/img-lg-bistec-cloud.png" alt="Bistec Cloud">
-            <img src="assets/images/img-lg-bistec-cloud-branco.png" alt="Bistec Cloud">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-cloud_c0xiNBXYJa.png" alt="Bistec Cloud">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-cloud-branco_YOnT9yY0l8.png" alt="Bistec Cloud">
                 <div class="texto-produtos">
                     <h2>Backup corporativo na nuvem</h2>
                     <h3>Guarde o que é importante com segurança, sem ocupar espaço algum!</h3>
@@ -66,8 +66,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-edu">
-            <img src="assets/images/img-lg-bistec-edu.png" alt="Bistec Edu">
-            <img src="assets/images/img-lg-bistec-edu-branco.png" alt="Bistec Edu">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-edu_PSjyfl7MM5.png" alt="Bistec Edu">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-edu-branco_sPWJsPTdbd.png" alt="Bistec Edu">
                 <div class="texto-produtos">
                     <h2>Treinamentos: use a tecnologia com capacidade máxima.</h2>
                     <h3>Faça o treinamento com toda a sua equipe e explore 100% da capacidade das soluções adquiridas.</h3>
@@ -76,8 +76,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-msp">
-            <img src="assets/images/img-lg-bistec-msp.png" alt="Bistec MSP">
-            <img src="assets/images/img-lg-bistec-msp-branco.png" alt="Bistec MSP">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-msp_B0X1--rWjF.png" alt="Bistec MSP">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-msp-branco_c3-cULE23-.png" alt="Bistec MSP">
                 <div class="texto-produtos">
                     <h2>Você sabe o que é um MSP?</h2>
                     <h3>
@@ -90,8 +90,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-outsourcing">
-            <img src="assets/images/img-lg-bistec-outsourcing.png" alt="Bistec OutSourcing">
-            <img src="assets/images/img-lg-bistec-outsourcing-branco.png" alt="Bistec OutSourcing">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-outsourcing_cM1x9Psys9.png" alt="Bistec OutSourcing">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-outsourcing-branco_apnbX3QYz.png" alt="Bistec OutSourcing">
                 <div class="texto-produtos">
                     <h2>Contrate outsourcing de TI</h2><p>
                     <h3>Contrate técnicos preparados para cuidar de sua empresa.</h3>
@@ -101,8 +101,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-renting">
-            <img src="assets/images/img-lg-bistec-renting.png" alt="Bistec Renting">
-            <img src="assets/images/img-lg-bistec-renting-branco.png" alt="Bistec Renting">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-renting_cK1Za3wHw.png" alt="Bistec Renting">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-renting-branco_xiNheO_TG.png" alt="Bistec Renting">
                 <div class="texto-produtos">
                     <h2>Renting de TI</h2>
                     <h3>Faça a locação de equipamentos, e mantenha a liquidez de sua empresa</h3>
@@ -112,8 +112,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-gpdr">
-            <img src="assets/images/img-lg-bistec-rgpd.png" alt="Bistec RGPD">
-            <img src="assets/images/img-lg-bistec-rgpd-branco.png" alt="Bistec RGPD">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-rgpd_0IWki3lZ8n.png" alt="Bistec RGPD">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-rgpd-branco_rM3Ix9jp9.png" alt="Bistec RGPD">
             <div class="texto-produtos">
                 <h2>Adeque sua empresa ao RGPD</h2>
                 <h3>
@@ -125,8 +125,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-soft">
-            <img src="assets/images/img-lg-bistec-soft.png" alt="Bistec Soft">
-            <img src="assets/images/img-lg-bistec-soft-branco.png" alt="Bistec Soft">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-soft_XRbY6Mmd5.png" alt="Bistec Soft">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-soft-branco_WIS0Fccj7.png" alt="Bistec Soft">
                 <div class="texto-produtos">
                     <h2>Todo tipo de software</h2><p>
                     <h3>O Bistec soft agora cuida do seu site e contas de e-mail!</h3>
@@ -136,8 +136,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-wifi">
-            <img src="assets/images/img-lg-bistec-wifi.png" alt="Bistec wifi">
-            <img src="assets/images/img-lg-bistec-wifi-branco.png" alt="Bistec wifi">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-wifi_SucXMC_nx.png" alt="Bistec wifi">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-wifi-branco_zJt9JTD5y4.png" alt="Bistec wifi">
             <div class="texto-produtos">
                 <h2>Conheça a nossa solução WAAS: Wi-Fi as a service.</h2>
                 <h3>
@@ -155,6 +155,6 @@
     <script src="./assets/js/componente_rodape.js"></script>
     <script src="./assets/js/main.js" defer></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
-    <!-- <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script> -->
+    <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script>
 </body>
 </html>
