corrige erro de acessibilidade do accessmonitor com a tag img do banner

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <article id="first_section">
         <!-- banner -->
         <section class="banner-bistec">
-            <img id="img-banner" alt="Imagem de fundo com o moliceiro da cidade de Aveiro">
+            <img id="img-banner" src="https://ik.imagekit.io/bistecpt/imagens/banner-moliceiro_lQJqvFZuv.png" alt="Imagem de fundo com o moliceiro da cidade de Aveiro">
             <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
                 <h2>Serviços em tecnologia para todas as empresas</h2>
