corrige erro de imagem duplicada

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- CORPO -->
     <article id="first_section">
         <!-- banner -->
-        <section class="banner-bistec">
+        <section class="banner-bistec" id="imagemUnica">
             <img id="img-banner" src="https://ik.imagekit.io/bistecpt/imagens/banner-moliceiro_lQJqvFZuv.png" alt="Imagem de fundo com o moliceiro da cidade de Aveiro">
             <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
