corrige erro de width e height não explicitos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <article id="first_section">
         <!-- banner -->
         <section class="banner-bistec" id="imagemUnica">
-            <img id="img-banner" src="https://ik.imagekit.io/bistecpt/imagens/banner-moliceiro_lQJqvFZuv.png" alt="Imagem de fundo com o moliceiro da cidade de Aveiro">
+            <img id="img-banner" src="https://ik.imagekit.io/bistecpt/imagens/banner-moliceiro_lQJqvFZuv.png" alt="Imagem de fundo com o moliceiro da cidade de Aveiro" width="1000" height="1000">
             <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
                 <h2>Serviços em tecnologia para todas as empresas</h2>
@@ -45,8 +45,8 @@
 
         <!-- PRODUTOS -->
         <section class="bistec-produtos" id="bistec-automacao">
-                <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-automacao_unO6Y7PW8m.png" alt="Bistec Automação"> 
-                <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-automacao-branco_r_afgqS8gN.png" alt="Bistec Automação">
+                <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-automacao_unO6Y7PW8m.png" alt="Bistec Automação" width="610" height="210"> 
+                <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-automacao-branco_r_afgqS8gN.png" alt="Bistec Automação" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Troque a anotação pela automação</h2>
                     <h3>Facilite a sua gestão e o consumo dos seus clientes. Automatize!</h3>
@@ -56,8 +56,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-cloud">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-cloud_c0xiNBXYJa.png" alt="Bistec Cloud">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-cloud-branco_YOnT9yY0l8.png" alt="Bistec Cloud">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-cloud_c0xiNBXYJa.png" alt="Bistec Cloud" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-cloud-branco_YOnT9yY0l8.png" alt="Bistec Cloud" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Backup corporativo na nuvem</h2>
                     <h3>Guarde o que é importante com segurança, sem ocupar espaço algum!</h3>
@@ -67,8 +67,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-edu">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-edu_PSjyfl7MM5.png" alt="Bistec Edu">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-edu-branco_sPWJsPTdbd.png" alt="Bistec Edu">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-edu_PSjyfl7MM5.png" alt="Bistec Edu" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-edu-branco_sPWJsPTdbd.png" alt="Bistec Edu" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Treinamentos: use a tecnologia com capacidade máxima.</h2>
                     <h3>Faça o treinamento com toda a sua equipe e explore 100% da capacidade das soluções adquiridas.</h3>
@@ -77,8 +77,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-msp">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-msp_B0X1--rWjF.png" alt="Bistec MSP">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-msp-branco_c3-cULE23-.png" alt="Bistec MSP">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-msp_B0X1--rWjF.png" alt="Bistec MSP" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-msp-branco_c3-cULE23-.png" alt="Bistec MSP" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Você sabe o que é um MSP?</h2>
                     <h3>
@@ -90,9 +90,9 @@
                 </div>
         </section>
 
-        <section class="bistec-produtos" id="bistec-outsourcing">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-outsourcing_cM1x9Psys9.png" alt="Bistec OutSourcing">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-outsourcing-branco_apnbX3QYz.png" alt="Bistec OutSourcing">
+        <section class="bistec-produtos" id="bistec-outsourcing" >
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-outsourcing_cM1x9Psys9.png" alt="Bistec OutSourcing" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-outsourcing-branco_apnbX3QYz.png" alt="Bistec OutSourcing" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Contrate outsourcing de TI</h2><p>
                     <h3>Contrate técnicos preparados para cuidar de sua empresa.</h3>
@@ -101,9 +101,9 @@
                 </div>
         </section>
 
-        <section class="bistec-produtos" id="bistec-renting">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-renting_cK1Za3wHw.png" alt="Bistec Renting">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-renting-branco_xiNheO_TG.png" alt="Bistec Renting">
+        <section class="bistec-produtos" id="bistec-renting" >
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-renting_cK1Za3wHw.png" alt="Bistec Renting" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-renting-branco_xiNheO_TG.png" alt="Bistec Renting" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Renting de TI</h2>
                     <h3>Faça a locação de equipamentos, e mantenha a liquidez de sua empresa</h3>
@@ -112,9 +112,9 @@
                 </div>
         </section>
 
-        <section class="bistec-produtos" id="bistec-gpdr">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-rgpd_0IWki3lZ8n.png" alt="Bistec RGPD">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-rgpd-branco_rM3Ix9jp9.png" alt="Bistec RGPD">
+        <section class="bistec-produtos" id="bistec-gpdr" >
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-rgpd_0IWki3lZ8n.png" alt="Bistec RGPD" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-rgpd-branco_rM3Ix9jp9.png" alt="Bistec RGPD" width="610" height="210">
             <div class="texto-produtos">
                 <h2>Adeque sua empresa ao RGPD</h2>
                 <h3>
@@ -125,9 +125,9 @@
             </div>
         </section>
 
-        <section class="bistec-produtos" id="bistec-soft">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-soft_XRbY6Mmd5.png" alt="Bistec Soft">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-soft-branco_WIS0Fccj7.png" alt="Bistec Soft">
+        <section class="bistec-produtos" id="bistec-soft" >
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-soft_XRbY6Mmd5.png" alt="Bistec Soft" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-soft-branco_WIS0Fccj7.png" alt="Bistec Soft" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Todo tipo de software</h2><p>
                     <h3>O Bistec soft agora cuida do seu site e contas de e-mail!</h3>
@@ -136,9 +136,9 @@
                 </div>
         </section>
 
-        <section class="bistec-produtos" id="bistec-wifi">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-wifi_SucXMC_nx.png" alt="Bistec wifi">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-wifi-branco_zJt9JTD5y4.png" alt="Bistec wifi">
+        <section class="bistec-produtos" id="bistec-wifi" >
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-wifi_SucXMC_nx.png" alt="Bistec wifi" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-wifi-branco_zJt9JTD5y4.png" alt="Bistec wifi" width="610" height="210">
             <div class="texto-produtos">
                 <h2>Conheça a nossa solução WAAS: Wi-Fi as a service.</h2>
                 <h3>
@@ -156,6 +156,6 @@
     <script src="./assets/js/componente_rodape.js"></script>
     <script src="./assets/js/main.js" defer></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
-    <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script>
+    <!-- <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script> -->
 </body>
 </html>
