--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <meta name="description" content="Bistec Consultoria de TI. Desde 1999 fornecendo produtos e serviços de Automação Comercial e Informática. Aproveite o melhor da tecnologia para seu negócio.">
     <title>Início - Bistec Portugal</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="assets/css/style.css"></noscript> -->
     <link rel="stylesheet" href="./assets/css/styleMobile.css">
     <link rel="stylesheet" href="./assets/css/styleTablet.css">
     <link rel="stylesheet" href="./assets/css/styleTelaQuadrada.css">
@@ -154,8 +156,8 @@
 
     <script src="./assets/js/componente_menu.js" defer></script>
     <script src="./assets/js/componente_rodape.js" defer></script>
-    <script src="./assets/js/main.js" async></script>
+    <script src="./assets/js/main.js" defer async></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
-    <!-- <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script> -->
+    <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script>
 </body>
 </html>
