--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
     <meta name="description" content="Bistec Consultoria de TI. Desde 1999 fornecendo produtos e serviços de Automação Comercial e Informática. Aproveite o melhor da tecnologia para seu negócio.">
     <title>Início - Bistec Portugal</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="assets/css/style.css"></noscript> -->
     <link rel="stylesheet" href="./assets/css/styleMobile.css">
     <link rel="stylesheet" href="./assets/css/styleTablet.css">
     <link rel="stylesheet" href="./assets/css/styleTelaQuadrada.css">
@@ -38,10 +36,10 @@
     <article id="first_section">
         <!-- banner -->
         <section class="banner-bistec" id="imagemUnica">
-            <img id="img-banner" src="https://ik.imagekit.io/bistecpt/imagens/banner-moliceiro_lQJqvFZuv.png" alt="Imagem de fundo com o moliceiro da cidade de Aveiro" width="1000" height="1000">
+            <img id="img-banner" src="https://ik.imagekit.io/bistecpt/imagens/banner-moliceiro_lQJqvFZuv.png" alt="" width="1000" height="1000">
             <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
-                <h2>Serviços em tecnologia para todas as empresas</h2>
+                <h2>Tecnologia para empresas de todos os tamanhos</h2>
             </div>
         </section>
 
