--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img src="assets/images/moliceiro-banner-bistecportugal2.png" alt="Imagem de fundo com o moliceiro da cidade de Aveiro">
             <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
-                <h2>Serviços em tecnologia para todas as empresas</h2>
+                <h2>Serviços de tecnologia para todas as empresas</h2>
             </div>
         </section>
 
@@ -46,7 +46,7 @@
             <img src="assets/images/banner-mobile-moliceiro.png" alt="Imagem de fundo com o moliceiro da cidade de Aveiro para mobile">
             <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
-                <h2>Serviços em tecnologia para todas as empresas</h2>
+                <h2>Serviços de tecnologia para todas as empresas</h2>
             </div>
         </section>
 
